Fixed Footer Container + Popup Buttons Overlapping Bug

--- a/src/styles/FooterContainer.css
+++ b/src/styles/FooterContainer.css
@@ -3,6 +3,7 @@
     bottom: 0%;
     margin: 0 0 10px 10px;
     padding: 80px 180px 0 0;
+    z-index: 1;
 }
 
 .image-container {
