--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -22,6 +22,7 @@
     display: flex;
     justify-content: center;
     margin-top: 20px;
+    padding-bottom: 50px; /* Padding to give space for the footer icon*/
 }
 
 .cake-caption-container {
@@ -64,6 +65,7 @@
 .bottom-container {
     width: 100%;
     display: flex;
+    /* min-height: min-content; */
 }
 
 @media only screen and (min-width: 0px) {
